Fix class overlap

--- a/docs/src/components/ExpansiveImage.css
+++ b/docs/src/components/ExpansiveImage.css
@@ -1,4 +1,4 @@
-.main-div {
+.expandsive-image {
     width: 27.5%;
     
     cursor: pointer;
@@ -11,7 +11,7 @@
     border-width: 0.5rem;
 }
 
-.main-div img {
+.expandsive-image img {
     width: 100%;
 
     border-radius: 0.6rem;
@@ -21,7 +21,7 @@
     aspect-ratio: 2;
 }
 
-.main-div h1 {
+.expandsive-image h1 {
     color: var(--font-color3);
 
     font-size: 1.25rem;
@@ -29,7 +29,7 @@
     margin-bottom: 0.3rem;
 }
 
-.main-div:hover {
+.expandsive-image:hover {
     transform: translateY(-5px);
     box-shadow: 0 6px 15px var(--card-color3);
 }
